--- a/src/index.css
+++ b/src/index.css
@@ -175,17 +175,133 @@ body {
 .pa-head:hover {
   color: #06bbcc;
 }
-
 .sign-Up {
-  position: relative;
-  top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* loginnnn */
+.sign-in {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.form-signin {
+  top: 70px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #ffffff;
+  padding: 30px;
+  width: 450px;
+  border-radius: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.login-img {
-  background-image: url("./Images/login-img.png");
+::placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.singup-img {
-  background-image: url("./Images/pexels-photo-1926988.jpeg");
+
+.form-signin button {
+  align-self: flex-end;
+}
+
+.flex-column > label {
+  color: #151717;
+  font-weight: 600;
+}
+
+.inputForm {
+  border: 1.5px solid #ecedec;
+  border-radius: 10px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  transition: 0.2s ease-in-out;
+}
+
+.input-pas {
+  margin-left: 10px;
+  border-radius: 10px;
+  border: none;
+  width: 85%;
+  height: 100%;
+}
+
+.input-pas:focus {
+  outline: none;
+}
+
+.inputForm:focus-within {
+  border: 1.5px solid #2d79f3;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.flex-row > div > label {
+  font-size: 14px;
+  color: black;
+  font-weight: 400;
+}
+
+.span {
+  font-size: 14px;
+  margin-left: 5px;
+  color: #2d79f3;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.button-submit {
+  margin: 20px 0 10px 0;
+  background-color: #111;
+  border: none;
+  color: white;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 10px;
+  height: 50px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.button-submit:hover {
+  background-color: #06bbcc;
+}
+
+.p {
+  text-align: center;
+  color: black;
+  font-size: 14px;
+  margin: 5px 0;
+}
+.btn-sign {
+  margin-top: 10px;
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  gap: 10px;
+  border: 1px solid #ededef;
+  background-color: white;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.btn-sign:hover {
+  border: 1px solid #2d79f3;
 }
 
 .image-overlay {
@@ -197,6 +313,14 @@ body {
   background-color: rgba(0, 0, 0, 0.4); /* لون الخلفية الشفافة */
 }
 
+.about-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 57%;
+  background-color: rgba(0, 0, 0, 0.4); /* لون الخلفية الشفافة */
+}
 .btn-sup {
   --primary-color: #06bbcc;
   --secondary-color: #fff;
@@ -316,10 +440,11 @@ body {
 }
 
 .about-header {
-  background-image: url("../src/Images//new/about1.jpg");
+  background-image: url("../src/Images/new/courses.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+
   height: 400px;
 }
 
@@ -980,7 +1105,7 @@ button-gogle {
   transform: scale(1.02);
 }
 .contact-header {
-  background-image: url("../src/Images/new/contact.png");
+  background-image: url("../src/Images/new/courses.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1268,7 +1393,7 @@ button-gogle {
 /* insssssstructors */
 
 .Instructor-header {
-  background-image: url("../src/Images/new/inst.jpg");
+  background-image: url("../src/Images/new/courses.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1488,11 +1613,11 @@ button-gogle {
 /* carrrrrrt  */
 
 .cart-header {
-  background-image: url("../src/Images/cart-head.webp");
+  background-image: url("../src/Images/new/courses.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 350px;
+  height: 400px;
 }
 
 .cart-details {
